force-app/src/objects/cpm__Payment_Profile__c.object
<CustomObject>
    <description>captures the payment profiles per contact/account.
such as IBAN, legacy bank account, Credit Card etc.</description>
    <fields>
        <fullName>cpm__Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The debitor organization.</description>
        <inlineHelpText>The debitor organization.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payment Profiles</relationshipLabel>
        <relationshipName>Payment_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cpm__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether this payment profile is active and available for use.</description>
        <inlineHelpText>Indicates whether this payment profile is active and available for use.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpm__Address_Line__c</fullName>
        <description>The payer&apos;s street address</description>
        <label>Address Line</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>cpm__BIC_Code__c</fullName>
        <description>The BIC code for the debitors bank.</description>
        <inlineHelpText>The BIC code for the debitors bank.</inlineHelpText>
        <label>BIC</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Bank_Account_Type__c</fullName>
        <inlineHelpText>Payer’s bank account type, e.g. checking or savings.</inlineHelpText>
        <label>Bank Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>checking</fullName>
                    <label>Checking</label>
                </value>
                <value>
                    <fullName>savings</fullName>
                    <label>Savings</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Bank_Account__c</fullName>
        <description>Pre-SEPA bank accounts. doesn&apos;t have the IBAN validation check.</description>
        <inlineHelpText>non IBAN bank account number. doesn&apos;t have the IBAN validation check.</inlineHelpText>
        <label>Bank Account</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Bank_Code__c</fullName>
        <description>Bank identifier, depending on scheme.</description>
        <label>Bank Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Branch_Code__c</fullName>
        <label>Branch Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Brand__c</fullName>
        <label>Brand</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__CCV__c</fullName>
        <description>Control number for this credit card</description>
        <label>CCV</label>
        <length>5</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>cpm__Card_BIN__c</fullName>
        <description>A bank identification number is the initial four to six numbers that appear on a credit card.</description>
        <inlineHelpText>A bank identification number</inlineHelpText>
        <label>Card BIN</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Clearing_Member_Id__c</fullName>
        <label>Clearing Member Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The debitor.</description>
        <inlineHelpText>The debitor.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Payment_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cpm__Country_PL__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GB</fullName>
                </value>
                <value>
                    <fullName>SE</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Country__c</fullName>
        <inlineHelpText>Please only use two-letter ISO country codes, e.g. GB for United Kingdom.</inlineHelpText>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Credit_Card_Number__c</fullName>
        <description>The Credit Card number.</description>
        <label>Credit Card Number</label>
        <length>175</length>
        <maskChar>X</maskChar>
        <maskType>creditCard</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>cpm__Enforce_Uniqueness__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enforce Uniqueness</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpm__Expiration_Date__c</fullName>
        <description>Expiration date for the credit card.</description>
        <label>Expiration Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Expiration_Year__c</fullName>
        <description>Expiration year for the credit card</description>
        <label>Expiration Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
                <value>
                    <fullName>2026</fullName>
                </value>
                <value>
                    <fullName>2027</fullName>
                </value>
                <value>
                    <fullName>2028</fullName>
                </value>
                <value>
                    <fullName>2029</fullName>
                </value>
                <value>
                    <fullName>2030</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Funding_Type__c</fullName>
        <label>Funding Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Debit</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Holder_Name__c</fullName>
        <description>Name of the account/credit card holder.</description>
        <inlineHelpText>Name of the account/credit card holder.</inlineHelpText>
        <label>Holder Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Housename_Or_Number__c</fullName>
        <description>House name or number.</description>
        <label>House name or number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Housenumber__c</fullName>
        <label>Housenumber (deprecated)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpm__IBAN__c</fullName>
        <description>The bank account number in IBAN format.</description>
        <inlineHelpText>The bank account number in IBAN format.</inlineHelpText>
        <label>IBAN</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Primary_Identifier__c</fullName>
        <externalId>true</externalId>
        <label>Primary Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__ProcessingHub_Id__c</fullName>
        <externalId>true</externalId>
        <label>ProcessingHub Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Sort_Code__c</fullName>
        <label>Sort Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__State_Province__c</fullName>
        <label>State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Suffix__c</fullName>
        <label>Suffix</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Token_Issuer__c</fullName>
        <label>Token Issuer</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Token__c</fullName>
        <label>Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Unique_Identifier__c</fullName>
        <externalId>true</externalId>
        <label>Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>cpm__Wallet_Id__c</fullName>
        <label>Wallet Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Wallet_Type__c</fullName>
        <label>Wallet Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apple Pay</fullName>
                </value>
                <value>
                    <fullName>Google Pay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Zipcode__c</fullName>
        <label>Zipcode</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>phstr__Fingerprint__c</fullName>
        <externalId>true</externalId>
        <label>Fingerprint</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Payment Profile</label>
    <listViews>
        <fullName>cpm__All</fullName>
        <columns>NAME</columns>
        <columns>cpm__IBAN__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PP-{0}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Profiles</pluralLabel>
    <recordTypes>
        <fullName>cpm__BBAN</fullName>
        <active>true</active>
        <description>Stores bank account information in local (non-IBAN) format</description>
        <label>BBAN</label>
    </recordTypes>
    <recordTypes>
        <fullName>cpm__Credit_Card</fullName>
        <active>true</active>
        <description>Stores Credit Card information</description>
        <label>Credit Card</label>
    </recordTypes>
    <recordTypes>
        <fullName>cpm__IBAN</fullName>
        <active>true</active>
        <description>Stores bank account information in the IBAN format</description>
        <label>IBAN</label>
    </recordTypes>
    <recordTypes>
        <fullName>cpm__Legacy_Bank_Account</fullName>
        <active>true</active>
        <description>Stores bank account information (pre-IBAN)</description>
        <label>Legacy Bank Account (Deprecated)</label>
    </recordTypes>
    <recordTypes>
        <fullName>cpm__Wallet</fullName>
        <active>true</active>
        <label>Wallet</label>
    </recordTypes>
    <recordTypes>
        <fullName>phstr__Bank_Account</fullName>
        <active>true</active>
        <description>Bank account record type for Bacs Direct Debit with Stripe as processor.</description>
        <label>Bank Account (Stripe)</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>cpm__BIC_is_mandatory_for_non_NL_IBANS</fullName>
        <active>false</active>
        <errorConditionFormula>if ( 1 == 0 , true, false )</errorConditionFormula>
        <errorDisplayField>cpm__BIC_Code__c</errorDisplayField>
        <errorMessage>BIC is mandatory for IBANs</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>cpm__IBAN_holdername_lenght_check</fullName>
        <active>true</active>
        <description>IBAN holder names can&apos;t be larger than 140 characters</description>
        <errorConditionFormula>IF ( AND ( $RecordType.Name = &quot;IBAN&quot;, LEN(cpm__Holder_Name__c) &gt; 140 ) , true ,false)</errorConditionFormula>
        <errorDisplayField>cpm__Holder_Name__c</errorDisplayField>
        <errorMessage>Holder name can&apos;t contain more than 140 characters</errorMessage>
    </validationRules>
</CustomObject>